all text-align fixed

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ header {
 }
 
 header h1{
-  text-align: left;
+
   font-size: 50px;
   font-weight: bolder;
   padding-top: 50px;
@@ -76,7 +76,6 @@ header h1{
 }
 
 header p{
-  text-align: left;
   font-size:26px;
   padding-bottom:50px;
 }
@@ -92,7 +91,7 @@ form input{
   margin:10px auto;
   width:90%;
   height: 35px;
-  text-align:left;
+
   padding-left: 10px;
 }
 form h4{
@@ -106,7 +105,7 @@ form h4:first-child{
 
 form p{
   font-size:14px;
-  text-align:center;
+
   padding-top:25px;
 }
 
@@ -135,7 +134,7 @@ form button{
 }
 
 #googlesign{
-  text-align: left;
+
   background-color: #fff;
   border: solid 1px lightgrey;
 }
@@ -177,7 +176,6 @@ form p a {
 }
 
 .deploy *{
-  text-align: left;
 }
 
 
@@ -193,7 +191,6 @@ form p a {
   max-width: 50%;
   margin-left:auto;
   margin-right:auto;
-  text-align:center;
 
 }
 
@@ -201,7 +198,6 @@ form p a {
 /* SECTION 4 - Built*/
 
 #section4{
-  text-align:left;
   padding:25px 0;
 }
 
